--- a/Mcba.UI/Mcba.UI.csproj
+++ b/Mcba.UI/Mcba.UI.csproj
@@ -90,6 +90,12 @@
     <Compile Include="FacturasItems.Designer.cs">
       <DependentUpon>FacturasItems.cs</DependentUpon>
     </Compile>
+    <Compile Include="Liquidacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Liquidacion.Designer.cs">
+      <DependentUpon>Liquidacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Localidades.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,6 +173,9 @@
     <EmbeddedResource Include="FacturasItems.resx">
       <DependentUpon>FacturasItems.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Liquidacion.resx">
+      <DependentUpon>Liquidacion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Localidades.resx">
       <DependentUpon>Localidades.cs</DependentUpon>
     </EmbeddedResource>
@@ -226,6 +235,7 @@
     <Content Include="Resources\iconEditar.png" />
     <Content Include="Resources\iconNew.png" />
     <Content Include="Resources\iconOut.png" />
+    <None Include="Resources\iconPrinter.png" />
     <Content Include="Resources\iconSave.png" />
     <Content Include="Resources\tick-sign-32.png" />
   </ItemGroup>
