--- a/Mcba.UI/Mcba.UI.csproj
+++ b/Mcba.UI/Mcba.UI.csproj
@@ -194,6 +194,12 @@
     <Compile Include="Usuarios.Designer.cs">
       <DependentUpon>Usuarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewBase.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewBase.Designer.cs">
+      <DependentUpon>ViewBase.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Backup.resx">
       <DependentUpon>Backup.cs</DependentUpon>
     </EmbeddedResource>
@@ -276,6 +282,9 @@
     <EmbeddedResource Include="Usuarios.resx">
       <DependentUpon>Usuarios.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ViewBase.resx">
+      <DependentUpon>ViewBase.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -295,6 +304,7 @@
     <None Include="Resources\IconBuscar.png" />
     <None Include="Resources\iconArrowRight.png" />
     <None Include="Resources\iconArrowRedLeft.png" />
+    <None Include="Resources\Find.jpg" />
     <Content Include="Resources\iconClear.png" />
     <Content Include="Resources\iconDelete.png" />
     <Content Include="Resources\iconEditar.png" />
@@ -302,7 +312,10 @@
     <None Include="Resources\iconOrdenProduccion16.png" />
     <Content Include="Resources\iconOut.png" />
     <None Include="Resources\iconPrinter.png" />
+    <None Include="Resources\iconPrinter-48.png" />
     <Content Include="Resources\iconSave.png" />
+    <None Include="Resources\printerIcon.png" />
+    <None Include="Resources\printerBlack.png" />
     <Content Include="Resources\tick-sign-32.png" />
   </ItemGroup>
   <ItemGroup>
