--- a/Mcba.UI/Mcba.UI.csproj
+++ b/Mcba.UI/Mcba.UI.csproj
@@ -66,6 +66,12 @@
     <Compile Include="Bitacora.Designer.cs">
       <DependentUpon>Bitacora.cs</DependentUpon>
     </Compile>
+    <Compile Include="CambioPassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CambioPassword.Designer.cs">
+      <DependentUpon>CambioPassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="Choferes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -209,6 +215,9 @@
     <EmbeddedResource Include="Bitacora.resx">
       <DependentUpon>Bitacora.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CambioPassword.resx">
+      <DependentUpon>CambioPassword.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Choferes.resx">
       <DependentUpon>Choferes.cs</DependentUpon>
     </EmbeddedResource>
@@ -311,11 +320,9 @@
     <Content Include="Resources\iconNew.png" />
     <None Include="Resources\iconOrdenProduccion16.png" />
     <Content Include="Resources\iconOut.png" />
-    <None Include="Resources\iconPrinter.png" />
-    <None Include="Resources\iconPrinter-48.png" />
     <Content Include="Resources\iconSave.png" />
-    <None Include="Resources\printerIcon.png" />
     <None Include="Resources\printerBlack.png" />
+    <None Include="Resources\Restore-Password-48.png" />
     <Content Include="Resources\tick-sign-32.png" />
   </ItemGroup>
   <ItemGroup>
