--- a/Mcba.Testing/Mcba.Testing.csproj
+++ b/Mcba.Testing/Mcba.Testing.csproj
@@ -61,6 +61,10 @@
       <Project>{4ecff366-c27e-46db-a040-eab954c32149}</Project>
       <Name>Mcba.Infraestruture</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mcba.Seguridad\Mcba.Seguridad.csproj">
+      <Project>{11206fab-8aba-4683-bb18-d9230e0ee88d}</Project>
+      <Name>Mcba.Seguridad</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
