--- a/Mcba.UI/Properties/Settings.settings
+++ b/Mcba.UI/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-	<Profiles>
-		<Profile Name="(Default)" />
-	</Profiles>
-	<Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Mcba.UI.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="Data" Type="System.String" Scope="User">
+      <Value Profile="(Default)">RGF0YS5qc29uQ2FjaG8=</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
