Menu principal - Leyendas según idioma: Login

--- a/Mcba.UI/Mcba.UI.csproj
+++ b/Mcba.UI/Mcba.UI.csproj
@@ -384,6 +384,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Logo2.png" />
+    <None Include="Resources\bsa.ico" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
