--- a/Mcba.UI/Properties/Settings.settings
+++ b/Mcba.UI/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="Data" Type="System.String" Scope="Application">
       <Value Profile="(Default)">RABhAHQAYQAuAGoAcwBvAG4A</Value>
     </Setting>
+    <Setting Name="Language" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
