--- a/Mcba.Bll/Mcba.Bll.csproj
+++ b/Mcba.Bll/Mcba.Bll.csproj
@@ -40,7 +40,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LanguagesBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserBll.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Mcba.Dal\Mcba.Dal.csproj">
+      <Project>{FE857B11-B218-47B1-9005-2F0ABCB54B8C}</Project>
+      <Name>Mcba.Dal</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mcba.Data\Mcba.Data.csproj">
+      <Project>{99AAA7FE-502F-4B27-A9A2-849A19329441}</Project>
+      <Name>Mcba.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mcba.Entidad\Mcba.Entidad.csproj">
+      <Project>{4514EA8D-D83A-4F2B-9985-56A8AA964E78}</Project>
+      <Name>Mcba.Entidad</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mcba.Infraestruture\Mcba.Infraestruture.csproj">
+      <Project>{4ECFF366-C27E-46DB-A040-EAB954C32149}</Project>
+      <Name>Mcba.Infraestruture</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Mcba.Seguridad\Mcba.Seguridad.csproj">
+      <Project>{11206fab-8aba-4683-bb18-d9230e0ee88d}</Project>
+      <Name>Mcba.Seguridad</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
