--- a/Mcba.Entidad/Mcba.Entidad.csproj
+++ b/Mcba.Entidad/Mcba.Entidad.csproj
@@ -42,8 +42,8 @@
   <ItemGroup>
     <Compile Include="Attributes\CryptAttribute.cs" />
     <Compile Include="CryptMethodEnum.cs" />
-    <Compile Include="Idioma.cs" />
-    <Compile Include="Usuario.cs" />
+    <Compile Include="Language.cs" />
+    <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
