--- a/Mcba.UI/Mcba.UI.csproj
+++ b/Mcba.UI/Mcba.UI.csproj
@@ -59,6 +59,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -112,6 +113,9 @@
     <Compile Include="CondicionesIva.Designer.cs">
       <DependentUpon>CondicionesIva.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\McbaToolStripButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Facturas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +151,9 @@
     </Compile>
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\McbsToolStrip.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
