--- a/Mcba.Infraestruture/Mcba.Infraestruture.csproj
+++ b/Mcba.Infraestruture/Mcba.Infraestruture.csproj
@@ -39,6 +39,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Enums\LanguageEnum.cs" />
     <Compile Include="Helpers\LanguageHelper.cs" />
+    <Compile Include="Helpers\MailHelper.cs" />
     <Compile Include="Settings\InstanceSettings.cs" />
     <Compile Include="Settings\McbaSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -61,10 +63,6 @@
     <ProjectReference Include="..\Mcba.Dal\Mcba.Dal.csproj">
       <Project>{fe857b11-b218-47b1-9005-2f0abcb54b8c}</Project>
       <Name>Mcba.Dal</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mcba.Data\Mcba.Data.csproj">
-      <Project>{99aaa7fe-502f-4b27-a9a2-849a19329441}</Project>
-      <Name>Mcba.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
