--- a/Mcba.Entidad/Mcba.Entidad.csproj
+++ b/Mcba.Entidad/Mcba.Entidad.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Attributes\CryptAttribute.cs" />
     <Compile Include="CryptMethodEnum.cs" />
+    <Compile Include="Integrity.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
