--- a/Mcba.Seguridad/Mcba.Seguridad.csproj
+++ b/Mcba.Seguridad/Mcba.Seguridad.csproj
@@ -46,7 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DvHelper.cs" />
+    <Compile Include="DvhHelper.cs" />
+    <Compile Include="DvValue.cs" />
     <Compile Include="Enums\CriticidadEnum.cs" />
     <Compile Include="Enums\TipoPermisoEnum.cs" />
     <Compile Include="Familia.cs" />
