--- a/Mcba.UI/App.config
+++ b/Mcba.UI/App.config
@@ -16,6 +16,9 @@
             <setting name="Data" serializeAs="String">
                 <value>RABhAHQAYQAuAGoAcwBvAG4A</value>
             </setting>
+            <setting name="DataPagination" serializeAs="String">
+                <value>50</value>
+            </setting>
         </Mcba.UI.Properties.Settings>
     </applicationSettings>
     <userSettings>
