--- a/Mcba.Bll/Mcba.Bll.csproj
+++ b/Mcba.Bll/Mcba.Bll.csproj
@@ -47,6 +47,7 @@
     <Compile Include="LanguagesBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserBll.cs" />
+    <Compile Include="UserNameGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mcba.Dal\Mcba.Dal.csproj">
