--- a/Mcba.UI/Mcba.UI.csproj
+++ b/Mcba.UI/Mcba.UI.csproj
@@ -387,6 +387,7 @@
     <None Include="Resources\Logo2.png" />
     <None Include="Resources\bsa.ico" />
     <None Include="Resources\iconArrowLeft.png" />
+    <None Include="Resources\Undo.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
