--- a/Mcba.Seguridad/Mcba.Seguridad.csproj
+++ b/Mcba.Seguridad/Mcba.Seguridad.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Patente.cs" />
     <Compile Include="Permiso.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserLogged.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mcba.Entidad\Mcba.Entidad.csproj">
