--- a/Mcba.Bll/Mcba.Bll.csproj
+++ b/Mcba.Bll/Mcba.Bll.csproj
@@ -42,11 +42,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BitacoraBll.cs" />
     <Compile Include="Helpers\CaptionHelper.cs" />
     <Compile Include="IntegrityBll.cs" />
     <Compile Include="LanguagesBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserBll.cs" />
+    <Compile Include="UserLogged.cs" />
     <Compile Include="UserNameGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
