--- a/Mcba.Infraestruture/Mcba.Infraestruture.csproj
+++ b/Mcba.Infraestruture/Mcba.Infraestruture.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Enums\ToolbarStatusEnum.cs" />
     <Compile Include="Enums\LanguageEnum.cs" />
     <Compile Include="Helpers\MailHelper.cs" />
+    <Compile Include="Helpers\OpenFormsHelper.cs" />
     <Compile Include="Settings\InstanceSettings.cs" />
     <Compile Include="Settings\McbaSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
