--- a/Mcba.Bll/Mcba.Bll.csproj
+++ b/Mcba.Bll/Mcba.Bll.csproj
@@ -43,13 +43,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BitacoraBll.cs" />
+    <Compile Include="FamiliaBll.cs" />
     <Compile Include="Helpers\CaptionHelper.cs" />
-    <Compile Include="IntegrityBll.cs" />
+    <Compile Include="Helpers\IntegrityHelper.cs" />
     <Compile Include="LanguagesBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserBll.cs" />
-    <Compile Include="UserLogged.cs" />
-    <Compile Include="UserNameGenerator.cs" />
+    <Compile Include="Helpers\UserNameGeneratorHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mcba.Dal\Mcba.Dal.csproj">
