--- a/Mcba.Dal/Mcba.Dal.csproj
+++ b/Mcba.Dal/Mcba.Dal.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="BitacoraDal.cs" />
     <Compile Include="CaptionDal.cs" />
+    <Compile Include="FamiliaDal.cs" />
     <Compile Include="IntegrityDal.cs" />
     <Compile Include="LanguageDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
