--- a/Mcba.Dal/Mcba.Dal.csproj
+++ b/Mcba.Dal/Mcba.Dal.csproj
@@ -48,6 +48,7 @@
     <Compile Include="FamiliaDal.cs" />
     <Compile Include="IntegrityDal.cs" />
     <Compile Include="LanguageDal.cs" />
+    <Compile Include="PermisoDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
