--- a/Mcba.Testing/Mcba.Testing.csproj
+++ b/Mcba.Testing/Mcba.Testing.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DvTest.cs" />
     <Compile Include="HashTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DvRepare.cs" />
     <Compile Include="UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
