--- a/Mcba.Entidad/Mcba.Entidad.csproj
+++ b/Mcba.Entidad/Mcba.Entidad.csproj
@@ -44,10 +44,12 @@
     <Compile Include="Bitacora.cs" />
     <Compile Include="Dto\FamiliaDto.cs" />
     <Compile Include="Dto\PermisoDto.cs" />
+    <Compile Include="EnumExtensions.cs" />
     <Compile Include="Enums\CriticidadEnum.cs" />
     <Compile Include="Enums\CryptMethodEnum.cs" />
     <Compile Include="Dto\UserDto.cs" />
     <Compile Include="Enums\TipoPermisoEnum.cs" />
+    <Compile Include="FamiliaPermiso.cs" />
     <Compile Include="Integrity.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="User.cs" />
