--- a/Mcba.Entidad/Mcba.Entidad.csproj
+++ b/Mcba.Entidad/Mcba.Entidad.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\CryptAttribute.cs" />
+    <Compile Include="Attributes\StringValueAttribute.cs" />
     <Compile Include="Bitacora.cs" />
     <Compile Include="Dto\FamiliaDto.cs" />
     <Compile Include="Dto\PermisoDto.cs" />
@@ -48,6 +49,7 @@
     <Compile Include="Enums\CriticidadEnum.cs" />
     <Compile Include="Enums\CryptMethodEnum.cs" />
     <Compile Include="Dto\UserDto.cs" />
+    <Compile Include="Enums\TablasIntegridadEnum.cs" />
     <Compile Include="Enums\TipoPermisoEnum.cs" />
     <Compile Include="FamiliaPermiso.cs" />
     <Compile Include="Integrity.cs" />
