--- a/Mcba.UI/Mcba.UI.csproj
+++ b/Mcba.UI/Mcba.UI.csproj
@@ -83,11 +83,11 @@
     <Compile Include="Bancos.Designer.cs">
       <DependentUpon>Bancos.cs</DependentUpon>
     </Compile>
-    <Compile Include="Bitacora.cs">
+    <Compile Include="Bitacoras.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Bitacora.Designer.cs">
-      <DependentUpon>Bitacora.cs</DependentUpon>
+    <Compile Include="Bitacoras.Designer.cs">
+      <DependentUpon>Bitacoras.cs</DependentUpon>
     </Compile>
     <Compile Include="Busqueda.cs">
       <SubType>Form</SubType>
@@ -272,8 +272,8 @@
     <EmbeddedResource Include="Bancos.resx">
       <DependentUpon>Bancos.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Bitacora.resx">
-      <DependentUpon>Bitacora.cs</DependentUpon>
+    <EmbeddedResource Include="Bitacoras.resx">
+      <DependentUpon>Bitacoras.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Busqueda.resx">
       <DependentUpon>Busqueda.cs</DependentUpon>
