--- a/Mcba.UI/Mcba.UI.csproj
+++ b/Mcba.UI/Mcba.UI.csproj
@@ -432,6 +432,7 @@
     <None Include="Resources\Backup.png" />
     <None Include="Resources\Restore-48.png" />
     <None Include="Resources\RepararIntegridad.png" />
+    <None Include="Resources\help.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
